# financial_crime_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
assets/: project_architecture.md
deliverables/: README.md
deliverables/mermaid/: agentic_rag_arch.md
evaluation/retriever/: retriever_evaluation_results.csv
qdrant_data/: meta.json
src/config/: model_config.py
src/ingestion/: chunker.py  loader.py  preprocesser.py
src/kg/: entity_extractor.py  graph_agent_tool.py  graph_builder.py  graph_query_tool.py  neo4j_manager.py
src/prompts/: prompts.py
src/rag/: evaluate_rag.py  generate_testset.py  retriever.py
src/schemas/: entity_schemas.py  intent_schemas.py  rag_schemas.py
src/scrapers/: sec_scraper.py
src/sec/: scraper.py
src/utils/: document_utils.py
src/visualization/: graph_viz.py
tests/test_entity_extraction/: test_entity_extraction.py
tests/test_graph_builder/: test_graph_builder.py
tests/test_visualization/: test_vis_graph.py
