[project]
name = "financial-crime-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-openai>=0.3.7",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "loguru>0.7.0",
    "ragas==0.2.10",
    "langchain-tavily==0.2.1",
    "rapidfuzz==3.14.1",
    "streamlit==1.50.0",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"